--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,10 @@
 #num.stream.threads: 30
 
 bootstrap.kafka.servers: 192.168.2.61:32788, 192.168.2.61:32789
+server:
+  port: 8081
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
