--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,31 +1,3 @@
-#spring.cloud.stream.bindings.output.contentType: application/json
-#spring.cloud.stream.kafka.streams.binder:
-#  brokers: localhost:32769, localhost:32771
-#  configuration:
-#    commit.interval.ms: 1000
-#    default.key.serde: org.apache.kafka.common.serialization.Serdes$StringSerde
-#    default.value.serde: org.apache.kafka.common.serialization.Serdes$StringSerde
-#
-#spring.cloud.stream.bindings.output:
-#  destination: output
-#  producer:
-#    headerMode: raw
-#    #useNativeEncoding: true
-#
-#spring.cloud.stream.bindings.input:
-#  destination: input
-#  consumer:
-#    concurency: 10
-#    headerMode: raw
-#server.port: 8081
-#spring:
-#  kafka:
-#    listener:
-#      concurrency: 30
-#kafka.num.stream.threads: 30
-#num.stream.threads: 30
-
-bootstrap.kafka.servers: 192.168.2.61:32770, 192.168.2.61:32771
 server:
   port: 8081
 management:
@@ -33,3 +5,31 @@ management:
     web:
       exposure:
         include: '*'
+
+#spring.cloud.stream.bindingRetryInterval: 5
+
+spring.cloud.stream.bindings.output:
+  destination: downloaded-ads
+  producer:
+    headerMode: raw
+
+spring.cloud.stream.bindings.input:
+  destination: download-request
+  group: download-request
+  consumer:
+    concurrency: 20
+    headerMode: raw
+
+spring:
+  cloud:
+    stream:
+      kafka:
+        streams:
+          binder:
+            application-id: sync-demo
+            configuration:
+              num.stream.threads: 20
+              commit.interval.ms: 1000
+              default.key.serde: org.apache.kafka.common.serialization.Serdes$StringSerde
+              default.value.serde: org.apache.kafka.common.serialization.Serdes$StringSerde
+            brokers: 192.168.2.61:32770, 192.168.2.61:32771
